--- a/src/routes/editor/editor.css
+++ b/src/routes/editor/editor.css
@@ -1,13 +1,12 @@
 .editor {
-  /* border: 1px solid gray; */
-  /* border-radius: 10px; */
   width: 95%;
   margin-left: auto;
   margin-right: auto;
-  /* height: 300px; */
+  margin-top: 135px;
 }
 
 .editor > li {
   list-style: square;
   margin: initial
 }
+
